[gd_scene load_steps=2 format=3 uid="uid://dpysli33fsn2k"]

[ext_resource type="Script" path="res://scripts/CardSlot.gd" id="1_5cwsj"]

[node name="CardSlot" type="Panel"]
custom_minimum_size = Vector2(100, 140)
script = ExtResource("1_5cwsj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 58.0
offset_bottom = 131.0

[node name="Label_Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "カード名"

[node name="Label_Effect" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "エフェクト"

[node name="Label_Power" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "力"

[node name="Label_Cost" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "コスト: 0"

[node name="Label_Info" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "説明"

[node name="TextureRect_Image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2
offset_right = 100.0
offset_bottom = 140.0
expand_mode = 1
